# wordlemini

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  devdeps.txt  pyproject.toml  requirements.txt
.github/workflows/: tox-tests.yml
wordlemini/: __init__.py  __main__.py  _cli.py  _config.py  _keyboards.py  _statistics.py  _util.py  template.config.json  template.data.json
wordlemini/assets/: statisticstyles.tcss  styles.tcss  wordlestyles.tcss
wordlemini/assets/corpus/: cs.txt  de.txt  en.txt  es.txt  fr.txt  it.txt  nl.txt  pt.txt  ru.txt
wordlemini/locales/: base.pot
wordlemini/locales/cs/LC_MESSAGES/: messages.mo  messages.po
wordlemini/locales/de/LC_MESSAGES/: messages.mo  messages.po
wordlemini/locales/en/LC_MESSAGES/: messages.mo  messages.po
wordlemini/locales/es/LC_MESSAGES/: messages.mo  messages.po
wordlemini/locales/fr/LC_MESSAGES/: messages.mo  messages.po
wordlemini/locales/it/LC_MESSAGES/: messages.mo  messages.po
wordlemini/locales/nl/LC_MESSAGES/: messages.mo  messages.po
wordlemini/locales/pt/LC_MESSAGES/: messages.mo  messages.po
wordlemini/locales/ru/LC_MESSAGES/: messages.mo  messages.po
